[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yfinace"
version = "1.0.0"
description = "A stock screening and analysis system with AI integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Addison Wu", email = "addison@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "yfinance>=0.2.18",
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "lxml>=4.9.0",
    "openpyxl>=3.0.0",
    "playwright>=1.30.0",
    "numpy>=1.21.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0"
]

[project.scripts]
yfinace = "main:main"

[project.urls]
Homepage = "https://github.com/addisonpwu/yfinance"
Repository = "https://github.com/addisonpwu/yfinance"